panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__logical-ops__test_logical_and.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/logical-ops/test_logical_and.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/logical-ops/test_logical_and.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (declaration external (f~1 `fn() -> int` (static f)) ∅)
   (function-definition external stack-size=104
      (main~2 `fn(∅: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~4 `int` @0)
         (argv~5 `ptr<ptr<char>>` @8))
      (compound-statement
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~5 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (logical-and `int` @48
                  (0 `int` @48)
                  (0 `int` @52))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~5 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (logical-and `int` @48
                  (0 `int` @48)
                  (42 `int` @52))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~5 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (logical-and `int` @48
                  (27 `int` @48)
                  (0 `int` @52))))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~5 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (logical-and `int` @48
                  (42 `int` @48)
                  (27 `int` @52))))
         (expression
            (logical-and `int` @16
               (0 `int` @16)
               (call `int` @20
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @32
                     (deref `ptr<char>` @32
                        (ptr-add `ptr<ptr<char>>` @40
                           (argv~5 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @48 (1 `int` @56)))))
                  (123 `int` @48))))
         (expression
            (logical-and `int` @16
               (123 `int` @16)
               (call `int` @20
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @32
                     (deref `ptr<char>` @32
                        (ptr-add `ptr<ptr<char>>` @40
                           (argv~5 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @48 (1 `int` @56)))))
                  (456 `int` @48))))
         (expression
            (logical-and `int` @16
               (call `int` @16
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @32
                     (deref `ptr<char>` @32
                        (ptr-add `ptr<ptr<char>>` @40
                           (argv~5 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @48 (1 `int` @56)))))
                  (5 `int` @48))
               (call `int` @52
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @56
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @64
                     (deref `ptr<char>` @64
                        (ptr-add `ptr<ptr<char>>` @72
                           (argv~5 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @80 (1 `int` @88)))))
                  (7 `int` @80))))
         (expression
            (logical-and `int` @16
               (call `int` @16
                  (addressof `ptr<fn() -> int>` @24
                     (f~1 `fn() -> int` (static f))))
               (call `int` @32
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @48
                     (deref `ptr<char>` @48
                        (ptr-add `ptr<ptr<char>>` @56
                           (argv~5 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @64 (1 `int` @72)))))
                  (1 `int` @64))))))
   (function-definition external stack-size=24
      (f~1 `fn() -> int` (static f))
      (compound-statement
         (return (0 `int` @0)))))

----- stderr -----
